--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@iconify/json": "^2.1.63",
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/google-fonts": "^1.3.0",
+    "@types/canvas-confetti": "^1",
     "@vueuse/core": "^8.7.4",
+    "canvas-confetti": "^1.5.1",
     "nuxt": "3.0.0-rc.4",
     "nuxt-windicss": "^2.4.2",
     "typescript": "^4.7.4",
