--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "@iconify/json": "^2.1.102",
     "@kevinmarrec/nuxt-pwa": "^0.4.2",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/google-fonts": "^3.0.0-0",
     "@types/canvas-confetti": "^1",
     "@vueuse/core": "^9.1.1",
+    "buffer": "^6.0.3",
     "canvas-confetti": "^1.5.1",
     "nuxt": "3.0.0-rc.9",
     "nuxt-windicss": "^2.5.1",
     "typescript": "^4.8.2",
     "unplugin-icons": "^0.14.9",
     "unplugin-vue-components": "^0.22.4"
-  },
-  "dependencies": {
-    "buffer": "^6.0.3"
   }
 }
