--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@vueuse/core": "^9.5.0",
     "buffer": "^6.0.3",
     "canvas-confetti": "^1.6.0",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.0.0",
     "nuxt-windicss": "^2.5.5",
     "typescript": "^4.9.3",
     "unplugin-icons": "^0.14.13",
+    "unplugin-icons-nuxt3": "^1.0.0",
     "unplugin-vue-components": "^0.22.9"
   }
 }
